--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <img src="images/myImage.jpg" alt="Karim Aburjeila personal Image" width="600" height="350" />
+    <img src="images/myImage.jpg" alt="Amir Mohammedsalih Image" width="200" height="200" />
     <h3>Amir Mohammedsalih</h3>
     <ul>
         <li>Lec01: HTML and CSS</li>
@@ -25,10 +25,9 @@
     </ul>
 
     <p>
-        <a href="https://validator.w3.org/check/referer">
-            <img src="images/HTML-checker.png" alt="Validate" style="width: 100px; height: 50;" />
-
-        </a>
+        <a href="http://validator.w3.org/check/referer"> <img 
+src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" 
+alt="html validator"/></a>
     </p>
 
 
