--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Amirs Page</title>
+    <title>Amir Page</title>
     <meta name="description" content="First Ass for WAP Course" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link href="images/icon.png" type="image/png" rel="shortcut icon" />
