--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p>
         <a href="http://validator.w3.org/check/referer"> <img 
 src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" 
-alt="html validator"/></a>
+alt="html validator" style="width: 100px; height: 50;" /></a>
     </p>
 
 
