--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     </ul>
 
     <p>
-     <a href="http://validator.w3.org/check?uri=referer"
-     onclick="this.href='http://validator.w3.org/check?uri=' + 
-document.URL"><img
-      src="http://www.w3.org/Icons/valid-xhtml10"
-      alt="Valid XHTML 1.0!" height="31" width="88" /></a>
+    <a 
+href="http://validator.w3.org/check/referer"> <img 
+src="images/htmlcheck.png" 
+alt="validate"/></a>
+
     </p>
 
 
